# gnucash-csv-to-beancount

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  pyproject.toml
.github/workflows/: ci-pipeline.yml  python-publish.yml
g2b/: g2b.py
tests/: test_g2b.py
