[build-system]
requires = ["setuptools>=68.0.0", "wheel", "setuptools-git-versioning>=2.0,<3"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["g2b"]

[tool.setuptools-git-versioning]
enabled = true

[project]
name = "g2b"
description = "Initialize a beancount ledger from a GnuCash CSV export"
dynamic = ["version"]
requires-python = ">=3.10"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business :: Financial :: Accounting",
]
keywords = [
  "gnucash",
  "beancount",
  "csv",
  "finance",
  "accounting"
]

dependencies = [
  "pandas",
  "beancount",
  "click",
  "rich",
  "pyyaml",
  "simpleeval"
]

[project.optional-dependencies]
dev = [
  "black",
  "pylint",
  "pytest",
  "pytest-cov",
  "coverage",
  "ruff"
]

[project.scripts]
g2b = "g2b.g2b:main"

[tool.black]
line-length = 100
target-version = ['py311']
