[build-system]
requires = ["setuptools>=68.0.0", "wheel", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["g2b"]

[tool.setuptools_scm]

[project]
name = "g2b"
description = "Initialize a beancount ledger from a GnuCash file"
dynamic = ["version"]
requires-python = ">=3.10"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business :: Financial :: Accounting",
]
keywords = [
  "gnucash",
  "beancount",
  "finance",
  "accounting"
]

dependencies = [
  "beancount",
  "click",
  "rich",
  "pyyaml",
  "piecash"
]

[project.optional-dependencies]
dev = [
  "black",
  "pylint",
  "pytest",
  "pytest-cov",
  "coverage",
  "ruff"
]

[project.urls]
Homepage = "https://github.com/dtrai2/gnucash-csv-to-beancount"
Documentation = "https://github.com/dtrai2/gnucash-csv-to-beancount/blob/main/README.md"
Repository = "https://github.com/dtrai2/gnucash-csv-to-beancount"
Issues = "https://github.com/dtrai2/gnucash-csv-to-beancount/issues"

[project.scripts]
g2b = "g2b.g2b:main"

[tool.black]
line-length = 100
target-version = ['py311']
